		Oliver Hine <br />
	<a href=http://www.oliverhine.com>http://www.oliverhine.com</a><br />

</p>
<hr/>
<div class="License">
	<h3>About the dnnCHAT Module</h3>

	<p class="Owner">
		<b>Version 01.00.02</b><br /><br /> 
	</p>
	<p>	
	<ul>
		<li>Updated to SignalR 2.0.2</li>
		<li>Added a Chat Archives page</li>
		<li>Added user avatar to the User List on the chat page, only for logged in user</li>
	</ul>
	</p>

	<p class="Owner">
		<b>Version 01.00.01</b><br /><br /> 
	</p>
	<p>	
	<ul>
		<li>Updated to SignalR 2.0.0</li>
	</ul>
	</p>
	
	<p class="Owner">
		<b>Version 01.00.00</b><br /><br /> First official DNNChat release replacing the old DNN Chat module.
	</p>
	<p>	
	<ul>
		<li>Added Room functionality. <ul><li>Ability to create/join rooms with /join</li></ul></li>
	</ul>
	</p>
	<p class="Owner">
		<b>Version 00.00.09</b><br /><br />
	</p>
	<p>	
	<ul>
		<li>Rebranded to dnnCHAT from SignalRChat. Namespace changes, SQL tables, etc.</li>
		<li>Stopped autoscrolling if your Window is out of focus, or if you have scrolled up from the bottom of the window</li>
		<li>Abstracted the JS out of view.ascx</li>
		<li>Updated MSBuild Community Tasks to 1.4.0.61</li>
		<li>Updated to SignalR 1.1.2</li>
	</ul>
	</p>
	<p class="Owner">
		<b>Version 00.00.07</b><br /><br />
	</p>
	<p>	
	<ul>
		<li>Fixed anonymous issue with v00.00.06</li>
	</ul>
	</p>

	<p class="Owner">
		<b>Version 00.00.06</b><br /><br />
	</p>
	<p>	
	<ul>
		<li>Fixed user list case sensitivity issue</li>
		<li>Removed ability to send a message if the system can't detect a name</li>
		<li>Removed ability to change your name to a blank space (& nbsp;)</li>
		<li>Now displaying the Date a message was posted, using Moment.js for date formatting (MIT license)</li>
		<li>Added textbox focus after selecting a user</li>
		<li>Chat History now courtesy of Oliver Hine and William Hetherington.</li>
		<li>Emoticon Support courtesy of Oliver Hine (using public domain images from http://simplesmileys.org/)</li>